--- a/Draw/Dice/View/PopupView/ChatView.xib
+++ b/Draw/Dice/View/PopupView/ChatView.xib
@@ -17,7 +17,7 @@
 			<string>IBUIPageControl</string>
 			<string>IBUIScrollView</string>
 			<string>IBUITableView</string>
-			<string>IBUITextField</string>
+			<string>IBUITextView</string>
 			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
@@ -53,7 +53,7 @@
 					<object class="IBUIScrollView" id="1009680257">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{20, 56}, {222, 35}}</string>
+						<string key="NSFrame">{{20, 97}, {222, 35}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
 						<reference key="NSNextKeyView" ref="501979713"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -71,7 +71,7 @@
 					<object class="IBUITableView" id="381758895">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{21, 101}, {222, 175}}</string>
+						<string key="NSFrame">{{21, 142}, {222, 134}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="800991718"/>
@@ -95,7 +95,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="264347475">
+						<object class="NSColor" key="IBUIHighlightedTitleColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -103,7 +103,7 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="418916340">
+						<object class="NSColor" key="IBUINormalTitleShadowColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
@@ -111,11 +111,11 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">clean_input@2x.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1045842772">
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="267337848">
+						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
@@ -125,7 +125,7 @@
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">1316</int>
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
-						<string key="NSFrame">{{112, 77}, {38, 36}}</string>
+						<string key="NSFrame">{{112, 118}, {38, 36}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
 						<reference key="NSNextKeyView" ref="298656072"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -135,28 +135,32 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUINumberOfPages">3</int>
 					</object>
-					<object class="IBUITextField" id="373099578">
+					<object class="IBUIImageView" id="410793629">
 						<reference key="NSNextResponder" ref="1009307457"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 20}, {188, 30}}</string>
+						<string key="NSFrame">{{20, 17}, {222, 72}}</string>
 						<reference key="NSSuperview" ref="1009307457"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUIText"/>
-						<int key="IBUIBorderStyle">3</int>
-						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MAA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace">
-								<int key="NSID">2</int>
-							</object>
+					</object>
+					<object class="IBUITextView" id="1052637542">
+						<reference key="NSNextResponder" ref="1009307457"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{20, 17}, {222, 72}}</string>
+						<reference key="NSSuperview" ref="1009307457"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAxIDEAA</bytes>
 						</object>
-						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
-						<float key="IBUIMinimumFontSize">17</float>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText"/>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+							<int key="IBUIAutocapitalizationType">2</int>
+							<int key="IBUIReturnKeyType">7</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
@@ -168,26 +172,6 @@
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
 						</object>
-					</object>
-					<object class="IBUIButton" id="172323797">
-						<reference key="NSNextResponder" ref="1009307457"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{212, 21}, {29, 29}}</string>
-						<reference key="NSSuperview" ref="1009307457"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">X</string>
-						<reference key="IBUIHighlightedTitleColor" ref="264347475"/>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="418916340"/>
-						<reference key="IBUIFontDescription" ref="1045842772"/>
-						<reference key="IBUIFont" ref="267337848"/>
 					</object>
 				</array>
 				<string key="NSFrameSize">{262, 283}</string>
@@ -231,6 +215,22 @@
 						<reference key="destination" ref="501979713"/>
 					</object>
 					<int key="connectionID">19</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">inputTextView</string>
+						<reference key="source" ref="1009307457"/>
+						<reference key="destination" ref="1052637542"/>
+					</object>
+					<int key="connectionID">30</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">inputTextViewBgImageView</string>
+						<reference key="source" ref="1009307457"/>
+						<reference key="destination" ref="410793629"/>
+					</object>
+					<int key="connectionID">32</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -294,8 +294,8 @@
 							<reference ref="60567703"/>
 							<reference ref="298656072"/>
 							<reference ref="501979713"/>
-							<reference ref="373099578"/>
-							<reference ref="172323797"/>
+							<reference ref="1052637542"/>
+							<reference ref="410793629"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -326,13 +326,13 @@
 						<reference key="parent" ref="1009307457"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">20</int>
-						<reference key="object" ref="373099578"/>
+						<int key="objectID">29</int>
+						<reference key="object" ref="1052637542"/>
 						<reference key="parent" ref="1009307457"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">21</int>
-						<reference key="object" ref="172323797"/>
+						<int key="objectID">31</int>
+						<reference key="object" ref="410793629"/>
 						<reference key="parent" ref="1009307457"/>
 					</object>
 				</array>
@@ -345,11 +345,11 @@
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.CustomClassName">UICustomPageControl</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="0.0" key="21.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
+				<string key="29.CustomClassName">UIPlaceholderTextView</string>
+				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">ChatView</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -358,7 +358,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">21</int>
+			<int key="maxID">32</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
